# compact_str

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  PERF_AUDIT.md  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: benchmarks.yml  ci.yml  clippy.yml  cross_platform.yml  cross_platform_skip.yml  fuzz.yml  fuzz_skip.yml  kani.yml  miri-proptest.yml  msrv.yml  msrv_skip.yml  nostd.yml  randomized.yml  release.yml  rust.yml
asm-harness/: Cargo.toml
asm-harness/src/: lib.rs
bench/: Cargo.toml
bench/benches/: apis.rs  compact_str.rs  compact_str_iai.rs  comparison.rs  gungraun_apis.rs  gungraun_compact_str.rs  gungraun_comparison.rs  gungraun_random.rs  micro.rs  perf_audit.rs  random.rs
compact_str/: Cargo.toml  README.md
compact_str/benches/: apis.rs  compact_str.rs  comparison.rs  moby10b.txt  perf.rs  random.rs
compact_str/examples/: codegen.rs
compact_str/fuzz/: Cargo.toml
compact_str/fuzz/fuzz_targets/: bytes.rs  correctness.rs  creation.rs  iter_char.rs  modify.rs
compact_str/src/: asserts.rs  cow.rs  lib.rs  macros.rs  serde.rs  tests.rs  to_compact_str_specialisation.rs  traits.rs  unicode_data.rs  utility.rs
compact_str/src/features/: arbitrary.rs  bevy_reflect.rs  borsh.rs  bytes.rs  defmt.rs  garde.rs  markup.rs  mod.rs  musli.rs  pb_jelly.rs  postgres_types.rs  proptest.rs  pyo3.rs  quickcheck.rs  rayon.rs  rkyv.rs  schemars.rs  serde.rs  smallvec.rs  sqlx.rs  surrealdb.rs  utoipa.rs  valuable.rs  zeroize.rs
compact_str/src/repr/: arc.rs  bytes.rs  capacity.rs  discriminant.rs  heap.rs  inline.rs  intrinsics.rs  iter.rs  kani.rs  last_utf8_char.rs  mod.rs  non_max.rs  nonmax.rs  num.rs  packed.rs  ref_str.rs  smallvec.rs  static_str.rs  traits.rs
compact_str/src/repr/arc/: inner.rs  mod.rs  writer.rs
compact_str/src/repr/boxed/: capacity.rs  inner.rs  mod.rs
compact_str/src/repr/heap/: arc.rs  mod.rs
compact_str/src/repr2/: bytes.rs  capacity.rs  heap.rs  inline.rs  iter.rs  mod.rs  nonmax.rs  traits.rs
compact_str/tests/: alloc.rs  correctness.rs  option.rs
examples/bevy/: Cargo.toml
examples/bevy-reflect/: Cargo.toml
examples/bevy-reflect/src/: main.rs
examples/bevy/src/: main.rs
examples/bytes/: Cargo.toml
examples/bytes/src/: main.rs
examples/diesel/: Cargo.toml
examples/diesel/src/: lib.rs  models.rs  schema.rs  schema.sql
examples/empty/: Cargo.toml
examples/empty/src/: main.rs
examples/garde/: Cargo.toml
examples/garde/src/: main.rs
examples/macros/: Cargo.toml
examples/macros/src/: main.rs
examples/pb-jelly/: Cargo.toml
examples/pb-jelly/protos/user/: basic.proto
examples/pb-jelly/src/: main.rs
examples/pyo3/: Cargo.toml
examples/pyo3/src/: lib.rs
examples/schemars/: Cargo.toml
examples/schemars/src/: main.rs
examples/serde/: Cargo.toml
examples/serde/src/: main.rs
examples/sqlx/: Cargo.toml
examples/sqlx/src/: lib.rs
examples/traits/: Cargo.toml
examples/traits/src/: main.rs
examples/utoipa/: Cargo.toml
examples/utoipa/src/: main.rs
examples/valuable/: Cargo.toml
examples/valuable/src/: main.rs
fuzz/: Cargo.toml  config.toml
fuzz/afl/in/: basic.txt  id:000101,src:000000,time:1940,execs:24542,op:havoc,rep:8  id:000120,src:000000,time:2004,execs:25278,op:havoc,rep:4  id:000127,src:000000,time:2061,execs:25986,op:havoc,rep:16  id:000130,src:000000,time:2090,execs:26329,op:havoc,rep:2,+cov  id:000138,src:000000,time:2193,execs:27598,op:havoc,rep:8  id:000167,src:000000,time:2705,execs:33790,op:havoc,rep:16,+cov  id:000180,src:000000,time:3253,execs:40495,op:havoc,rep:16,+cov  id:000188,src:000000,time:3432,execs:42717,op:havoc,rep:16,+cov  id:000189,src:000000,time:3463,execs:43089,op:havoc,rep:16,+cov  id:000203,src:000000,time:4648,execs:57845,op:havoc,rep:16  id:000207,time:0,execs:0,orig:id_000203,src_000000,time_4648,execs_57845,op_havoc,rep_16  id:000211,src:000000,time:5660,execs:70434,op:havoc,rep:8  id:000217,src:000000,time:7037,execs:87578,op:havoc,rep:16  id:000222,time:0,execs:0,orig:id_000161,src_000000,time_2521,execs_31609,op_havoc,rep_16  id:000235,time:0,execs:0,orig:id_000073,src_000000,time_1833,execs_23310,op_havoc,rep_4  id:000238,src:000226,time:22,execs:2180,op:havoc,rep:16,+cov  id:000249,src:000226,time:78,execs:2837,op:havoc,rep:4,+cov  id:000250,sync:fuzzer01,src:000243  id:000256,sync:fuzzer01,src:000250  id:000267,sync:fuzzer01,src:000262,+cov  id:000268,src:000226,time:288,execs:5556,op:havoc,rep:8,+cov  id:000270,src:000226,time:382,execs:6827,op:havoc,rep:16,+cov  id:000273,src:000226,time:443,execs:7645,op:havoc,rep:8,+cov  id:000275,sync:default,src:000272  id:000277,src:000226,time:548,execs:9045,op:havoc,rep:16,+cov  id:000280,src:000226,time:646,execs:10358,op:havoc,rep:16,+cov  id:000289,src:000226,time:836,execs:12926,op:havoc,rep:16,+cov  id:000297,src:000226,time:956,execs:14519,op:havoc,rep:16,+cov  id:000300,src:000226,time:984,execs:14890,op:havoc,rep:16,+cov  id:000307,src:000226,time:1177,execs:17475,op:havoc,rep:4,+cov  id:000307,sync:fuzzer01,src:000309  id:000308,src:000226,time:1179,execs:17494,op:havoc,rep:2,+cov  id:000311,src:000226,time:1218,execs:18003,op:havoc,rep:16  id:000313,src:000226,time:1329,execs:19503,op:havoc,rep:8,+cov  id:000314,src:000226,time:1330,execs:19522,op:havoc,rep:16  id:000319,sync:fuzzer01,src:000321  id:000324,sync:fuzzer01,src:000327  id:000330,src:000226,time:1860,execs:26524,op:havoc,rep:16,+cov  id:000335,sync:default,src:000334,+cov  (+544 more)
fuzz/fuzz_targets/: compact_str.rs  modify.rs
fuzz/src/: actions.rs  bytes.rs  creation.rs  lib.rs
scripts/: diff_asm.sh  diff_mca.sh  dump_asm.sh  mca.sh
smart_str/: Cargo.toml
smart_str/benches/: perf.rs
smart_str/src/: lib.rs  metadata.rs  repr.rs  serde.rs  smart.rs  tests.rs
smart_str/src/repr/: discriminant.rs  heap.rs  inline.rs  mod.rs  packed.rs
smart_str/tests/: alloc.rs  correctness.rs
src/: lib.rs  metadata.rs  repr.rs  smart.rs
tracing/: Cargo.toml
tracing/src/: lib.rs
tracing_alloc/: Cargo.toml  README.md
tracing_alloc/src/: lib.rs
