[workspace]
members = [
    "bench",
    "examples/bevy-reflect",
    "examples/bytes",
    "examples/diesel",
    "examples/garde",
    "examples/macros",
    "examples/serde",
    "examples/schemars",
    "examples/sqlx",
    "examples/traits",
    "examples/utoipa",
    "fuzz",
]
exclude = ["compact_str"]

resolver = "2"
