[workspace]
members = [
    "bench",
    "examples/bevy-reflect",
    "examples/bytes",
    "examples/diesel",
    "examples/garde",
    "examples/macros",
    "examples/schemars",
    "examples/serde",
    "examples/sqlx",
    "examples/traits",
    "examples/utoipa",
    "examples/valuable",
    "fuzz",
]
exclude = ["compact_str"]

resolver = "2"
