[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compact_str = { path = "../compact_str" }
criterion = { version = "0.3", features = ["html_reports"] }
smartstring = "0.2"
smol_str = "0.1"

[[bench]]
name = "apis"
harness = false

[[bench]]
name = "compact_str"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "random"
harness = false
