[package]
name = "compact_str"
description = "A memory efficient string type that transparently stores strings on the stack, when possible"
version = "0.3.2"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/ParkMyCar/compact_str"
repository = "https://github.com/ParkMyCar/compact_str"
readme = "../README.md"
keywords = ["string", "compact", "small", "memory", "mutable"]
categories = ["encoding", "parsing", "memory-management", "text-processing"]

[dependencies]
bytes = { version = "1", optional = true }
serde = { version = "1", optional = true }

castaway = "0.2.1"
itoa = "1"
ryu = "1"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
test-strategy = "0.2"
