[package]
name = "compact_str"
description = "A memory efficient string type that transparently stores strings on the stack, when possible"
version = "0.5.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/ParkMyCar/compact_str"
repository = "https://github.com/ParkMyCar/compact_str"
readme = "../README.md"
keywords = ["string", "compact", "small", "memory", "mutable"]
categories = ["encoding", "parsing", "memory-management", "text-processing"]

[dependencies]
arbitrary = { version = "1", optional = true, default-features = false }
bytes = { version = "1", optional = true }
proptest = { version = "1", optional = true, default-features = false }
quickcheck = { version = "1", optional = true, default-features = false }
serde = { version = "1", optional = true }

castaway = "0.2.1"
itoa = "1"
ryu = "1"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
quickcheck_macros = "1"
rayon = "1"
test-strategy = "0.2"
