[package]
name = "compact_str"
description = "A memory efficient string type that transparently stores strings on the stack, when possible"
version = "0.6.0-alpha.6"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/ParkMyCar/compact_str"
repository = "https://github.com/ParkMyCar/compact_str"
readme = "../README.md"
keywords = ["string", "compact", "small", "memory", "mutable"]
categories = ["encoding", "parsing", "memory-management", "text-processing"]

[dependencies]
arbitrary = { version = "1", optional = true, default-features = false }
bytes = { version = "1", optional = true }
markup = { version = "0.13", optional = true, default-features = false }
proptest = { version = "1", optional = true, default-features = false }
quickcheck = { version = "1", optional = true, default-features = false }
serde = { version = "1", optional = true }

castaway = "0.2.1"
itoa = "1"
ryu = "1"

[dev-dependencies]
cfg-if = "1"
proptest = { version = "1", default-features = false, features = ["std"] }
quickcheck_macros = "1"
rayon = "1"
test-strategy = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
