[package]
name = "compact_str-fuzz"
version = "0.0.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
bytes = "1"
compact_str = { path = "../compact_str", features = ["bytes"] }

# Fuzz with both AFL++ and libFuzzer
afl = { version = "0.12.1", optional = true }
libfuzzer-sys = { version = "0.4", optional = true }

[[bin]]
name = "compact_str"
path = "fuzz_targets/compact_str.rs"
test = false
doc = false
required-features = ["libfuzzer-sys"]

[[bin]]
name = "afl"
path = "src/bin/afl.rs"
test = false
doc = false
required-features = ["afl"]
