[package]
name = "smart_str"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
static_assertions = "1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
proptest = "1"
rand = "0.8"
smartstring = "0.2"
smol_str = "0.1"
tracing_alloc = { path = "../tracing_alloc" }

[[bench]]
name = "perf"
harness = false
