[package]
name = "example-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compact_str = { version = "0.9.0", features = ["bevy-reflect"], path="../../compact_str" }
bevy_ecs = "0.17.0-rc.1"
bevy_reflect = "0.17.0-rc.1"
