[package]
name = "pb-jelly"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compact_str = { path = "../../compact_str", features = ["proto"] }
pb-jelly = "0.0.11"
proto_user = { path = "protos/gen/proto_user" }
